# vSLAM_FrontEnd

./: .gitignore  CMakeLists.txt  README.md
cmake/: AKAZEConfig.cmake  KAZEConfig.cmake  OpenCVConfig.cmake  OpenCVModules.cmake  StructuresConfig.cmake
include/vSLAM_FrontEnd/: dirUtilities.hpp
include/vSLAM_FrontEnd/Description/: BaseDescription.hpp  BriskDescription.hpp
include/vSLAM_FrontEnd/Detection/: ASiftDetector.hpp  AkazeDetector.hpp  BriskDetector.hpp  DetectorSettings.hpp  FastDetector.hpp  FreakDetector.hpp  KazeDetector.hpp  OrbDetector.hpp  SiftDetector.hpp
include/vSLAM_FrontEnd/StereoFront/: Matching.hpp  SingleFront.hpp  StereoCamera.hpp
src/: CMakeLists.txt
src/Description/: BriskDescription.cpp
src/Detection/: ASiftDetector.cpp  AkazeDetector.cpp  BriskDetector.cpp  FastDetector.cpp  FreakDetection.cpp  FreakDetector.cpp  KazeDetector.cpp  OrbDetector.cpp  SiftDetector.cpp
src/StereoFront/: Matching.cpp  SingleFront.cpp  StereoCamera.cpp
